[tool.poetry]
name = "messenger-business-api"
version = "0.1.0"
description = ""
authors = ["Yuri Ramos <yuri@smartlocator.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "messenger_business_api"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
